# weather-cli

./: .gitignore  Cargo.toml  README.md  weather-cli.conf
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/command/: command_executor.rs  command_service.rs  mod.rs
src/command/executors/: configure_executor.rs  get_executor.rs  list_executor.rs  mod.rs
src/config/: app_config.rs  args_parser.rs  config_file_parser.rs  mod.rs  parser.rs
src/enums/: mod.rs
src/errors/: config_error.rs  execution_error.rs  mod.rs  provider_error.rs
src/logger/: mod.rs
src/provider/: mod.rs  provider.rs  provider_service.rs  weather.rs
src/provider/providers/: openweather.rs  weatherapi.rs
src/struct/: structs.rs
tests/: api_integration_test.rs
