[package]
name = "weather-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
dateparser = "0.1"
log = { version = "0.4.20", features = ["std"] }
lazy_static = "1.4"
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

